--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -199,7 +199,7 @@ introduce anche altre tecnologie, come lo structured storage (tutto è all'inter
 di un singolo le) e un sistema di scambio dei dati unicato. DCOM introduce
 soprattutto diversi strumenti proprietari Microsoft per il web, spesso incompatibili con altri strumenti.
 Per introdurre la dinamicità, un oggetto deve implementare anche l'interfaca
-cia IDispatch, che è riessiva, la base stessa di automation. Infatti, a differenza
+cia IDispatch, che è riflessiva, la base stessa di automation. Infatti, a differenza
 di CORBA, in COM-DCOM non vi è un IR per registrare le interfacce: si tratta
 quindi di interrogare ed invocare in maniera dinamica i componenti! Si tratta
 di un sistema del tutto analogo alla Request di CORBA.
