--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -129,8 +129,8 @@ una comunità molto vasta ed attiva.
 $\bullet$ Addattativi e Riessivi: un mw addattativo è un mw che varia i servizi
 nel tempo, a seconda della situazione, quindi a caldo: deve essere quindi
 di fornire nuovi modi di lavorare.
-Il fatto che sia riessivo indica invece che un componente del mw deve essere in grado di esporre quello che fa. Un
-sistema riessivo è maggiormente
+Il fatto che sia riflessivo indica invece che un componente del mw deve essere in grado di esporre quello che fa. Un
+sistema riflessivo è maggiormente
 costoso di un sistema statico, ma è un sistema che viene valutato molto
 perché permette, in maniera dinamica, di definire via real-time come il
 componente funzioni!
