--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -371,7 +371,7 @@ Ma quindi, al crescere di N, l'efficienza tende a 0! Per quanto riguarda lo spee
 nodi,
 ovvero più si risale l'albero e meno i
 processori lavorano (il processore radice deve attendere, ovvero tempo di idle,
-che tutti gli altri abbiano nito!). Se invece avessimo un usso di dati, i processori risulterebbero tutti sempre
+che tutti gli altri abbiano finito!). Se invece avessimo un flusso di dati, i processori risulterebbero tutti sempre
 impegnati (potremmo risolvere un insieme di
 problemi).
 Come si possono quindi mantenere sempre impegnati i processori? Si deve
