--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -149,7 +149,7 @@ sistema, come una composizione e coordinazione dei servizi, per poter aprire i
 WS ad una categoria di utenti più ampia. L'idea sarebbe quindi quella che, per
 ottenere un nuovo servizio, si compongano quelli precedenti. Per far ciò sono
 83
-stati introdotti nuovi linguaggi a usso (Business Process Execution Language
+stati introdotti nuovi linguaggi a flusso (Business Process Execution Language
 4WS: si possono mettere in sequenza, parallelo, in alternativa o in join) per
 i WS, che lavorano sempre ad un livello molto alto. L'estensione dei WS in
 `
