--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -154,7 +154,7 @@ $\bullet$ In fase di progettazione si parla di
 -- un sistem diretto (cioè se avviene una comunicazione diretta fra i
 processi), oppure indiretto (se si utilizzano strutture tipo le socket)
 $\bullet$ In fase di implemtazione si parla di
--- un sistema buerizzato se la comunicazione richiede un certo numero
+-- un sistema bufferizzato se la comunicazione richiede un certo numero
 di messaggi prima di poter trasmettere
 -- Sistemi reliable se possono fornire QoS, senza perdere messaggi.
 Nel caso si introduca un terzo oggetto che faccia da mediatore, si può quindi
