--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -383,7 +383,7 @@ entrambi i casi si lavora solo dal lato del client, per estendere la funzionalit
 Il servant continua a lavorare in maniera sincrona bloccante! Ciò che cambia
 oltre a chi richiama il metodo (nel primo caso è l'ORB, nel secondo è il client),
 l'interfaccia è leggermente diversa: nel poll i parametri necessari sono di out!
-Questo genere di interazione è molto diusa, perché permette di richiedere
+Questo genere di interazione è molto diffusa, perché permette di richiedere
 contemporaneamente molte {`}istruzioni'.
 \subsection{Servizi già presenti in CORBA}
 Come già detto, CORBA fornisce diversi servizi già utilizzabili.
