--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -113,7 +113,7 @@ tipati o meno, e risulta essere facile la realizzazione di multi/broadcast.
 A livello di implementazione si può citare JMS, che venendo dopo gli
 altri sistemi, sviluppa un sistema basato su interfacce per poter definire i
 messaggi ben formati.
-$\bullet$ DOC : sono i mw in assoluto più diusi. Si preoccupano di definire un'inu
+$\bullet$ DOC : sono i mw in assoluto più diffusi. Si preoccupano di definire un'inu
 terazione molto precisa e regolata, astraendo le risorse ad essere oggetti.
 Si incapsula il C/S in un universo basato sugli oggetti. Tuttavia, non vi
 è mai in generale una comunicazione diretta, per via della presenza di un
@@ -181,7 +181,7 @@ intermediari, ed esistono messaggi broker appositi per gestire l'eterogeneità)!
 Questi sono mw a basso costo, perché fanno da collante: non si aggiunge
 molto all'applicazione, ma solo la possibilità di mandare e ricevere messaggi! Il
 costo limitato facilita infatti l'integrazione di sistemi legacy!
-Uno dei MOM più diusi è MQSeries di IBM: questo realizza uno stub per
+Uno dei MOM più diffusi è MQSeries di IBM: questo realizza uno stub per
 ogni client, e introduce degli agenti che non sono altro che nodi particolari che
 fanno da relay. I gestori delle code sono a loro volta degli agenti, ve ne è quindi
 uno per coda. Il problema è che gli agenti gestori dei canali (MCA) devono
