--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -126,7 +126,7 @@ Spesso e volentieri, un middleware non si occupa del deployment, ma deve essere 
 fra i componenti. L'allocazione può essere statica, cioè decisa prima dell'esecuzione, oppure dinamica, quindi
 durante; quest'ultimo modello permette di poter spostare le risorse a seconda delle esigenze durante l'esecuzione.
 Spesso e volentieri, l'allocazione viene realizzata utilizzando dei semplici file batch, rendendola semi-manuale (certe
-congurazioni devono poi essere sistemate a seconda dei casi dall'operatore).
+configurazioni devono poi essere sistemate a seconda dei casi dall'operatore).
 L'approccio misto è quello più usato, essendo una via di mezzo fra l'allocazione esplicita (tutta a carico dell'utente)
 e quella implicita (decisa in toto dal sistema).
 
