--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -52,7 +52,7 @@ $\bullet$ Distribution middleware: altro aspetto fondamentale, è quella parte d
 middleware che permette di integrare le risorse distribuite, mediante un
 apposito sistema di comunicazione. Si tratta anche questo di un qualcosa che deve essere opportunatamente distribuito su
 tutti i nodi. Es`
-empi: RMI23 , JMS, CORBA. E quindi questo il livello che congura e
+empi: RMI23 , JMS, CORBA. E quindi questo il livello che configura e
 gestisce le risorse distribuite. Introduce quindi API per la comunicazione
 e meccanismi di supporto alla comunicazione (per esempio, un sistema di
 nomi).
@@ -339,7 +339,7 @@ Questi ultimi due modelli son presenti in CORBA, .NET e diversi altri mw.
 Spesso questi pattern rappresentano politiche possibili per il deployment e o la
 configurazione dei vari servizi. I mw possono prevederne più di uno, a seconda
 delle esigenze dell'utenza.
-$\bullet$ Il pattern più semplice è quello delle istanze precongurate: viene deciso
+$\bullet$ Il pattern più semplice è quello delle istanze preconfigurate: viene deciso
 il deployment presso il server in maniera statica, primache il client possa
 `
 eseguire delle richieste. E una politica rigida rispetto ad altre, e si deve
