--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -2,7 +2,7 @@
 L'idea alla base dei Web Services è quella di fornire dei servizi B2B invece dei
 classici servizi Web. La logica è che il Web è l'installato più diffuso e facilmente
 accedibile al mondo, perché non sfruttarlo?
-Si ha infatti che molti mw richiedono congurazioni che vanno per esempio
+Si ha infatti che molti mw richiedono configurazioni che vanno per esempio
 contro certi principi delle aziende (aperture di ulteriori porte verso l'esterno),
 aggiungendo dei vincoli organizzativi che possono renderne l'applicazione ancora
 più complessa.
