--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -32,7 +32,7 @@ che lo necessitano (ogni programma ha una sua coda per gli eventi).
 Un'altra tecnologia importante introdotta dalla Microsoft è il cosidetto Obe
 ject Linking and Embedding, per cui si vuole gestire le applicazioni in maniera
 34 Quindi
-ogni nestra registra per ogni evento un possibile handler!
+ogni finestra registra per ogni evento un possibile handler!
 72
 integrata. L'idea è quella di suddividere correttamente i compiti fra il docue
 mento ed il gestore del documento. Ogni tipologia di documento, infatti, ha un
