--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -124,200 +124,157 @@ Il piano del management in realtà può essere scomposto in diverse sottoparti, 
 l'accounting e la sicurezza dei servizi.
 
 \subsection{Gestione dei sistemi: OSI e SNMP}
-OSI ha definito un sistema per poter monitorare/gestire un insieme di risorse
-mediante l'uso di risorse astratte 8 : l'idea è quella di utilizzare delle descrizioni
-standard per poter definire risorse e azioni, necessarie per la gestione. Le informazioni che descrivono quindi il mondo
-sono codicare utilizzando il CMIB,
-Common Management Information Base. OSI quindi sarebbe in grado, mediante queste informazioni, di poter gestire i
-singoli nodi di una rete (tipo, poter
-specificare la banda erogabile presente su un nodo9 , . . . ). OSI struttura il management con l'idea che vi siano
-manager
-in grado di comunicare con gli agenti,i
-responsabili delle singole risorse: non vi è una specifica precisa, permettendo
-quindi di poter realizzare architetture più o meno complesse.
-In realtà, il protocollo più diuso per la gestione di una rete è anche uno
-dei più semplici, detto Simple Network Management Protocol, sviluppato dall'Iu
-ETF, e per questo incompatibile con OSI : inizialmente non teneva conto della
-sicurezza, e si trattava di pura e semplice comunicazione.
+OSI ha definito un sistema per poter monitorare/gestire un insieme di risorse mediante l'uso di risorse
+astratte\footnote{Non esistono specifiche su come implementarle, quindi le varie realizzazioni sono standard de facto}:
+l'idea è quella di utilizzare delle descrizioni standard per poter definire risorse e azioni, necessarie per la
+gestione. Le informazioni che descrivono quindi il mondo sono codificate utilizzando il CMIB\footnote{Common Management
+Information Base}. OSI quindi sarebbe in grado, mediante queste informazioni, di poter gestire i singoli nodi di una
+rete (tipo, poter specificare la banda erogabile presente su un nodo\textit{Attenzione, OSI è solo comunicazione!! La
+banda dovrà poi essere stabilita dal singolo router, la tecnologia utilizzata deve essere indipendente da questa
+comunicazione!}...).
+OSI struttura il management con l'idea che vi siano manager in grado di comunicare con gli agenti, i responsabili 
+delle singole risorse: non vi è una specifica precisa, permettendo quindi di poter realizzare architetture più o meno
+complesse.
+In realtà, il protocollo più diffuso per la gestione di una rete è anche uno dei più semplici, detto \textbf{Simple
+Network Management Protocol}, sviluppato dall'IETF, e per questo \textit{incompatibile con OSI}: inizialmente non 
+teneva conto della sicurezza, e si trattava di pura e semplice comunicazione.
 SNMP definisce (nella sua prima realizzazione) un unico manager centralizzato e diversi agenti non locali, quindi
-studiati
-per un sistema distribuito. Il
-manager si preoccupa quindi di fare delle richieste sugli agenti, i quali devono
-rispondere, e possono anche avvisare di eventuali problemi/eventi mediante delle
-trap. Il protocollo è molto sincrono, ovvero si attende sempre una risposta!
-Un agente in realtà gestisce delle variabili standard (non se ne possono
-introdurre di nuove), che sono descritte nel MIB: le operazioni sono quindi
-semplicemente delle GET e SET su queste variabili.
-Una prima reingegnerizzazione di SNMP ha portato alla possibilità di poter
-definire il manager come una struttura gerarchica (sfruttando l'idea di realizzare
-degli agenti proxy, una via di mezzo fra un agent e un master), in maniera da
-ridurre i rischi di una congestione, suddividendo la responsabilità. Il costo è
-quindi limitato dal numero di agenti presenti. Solo però con la terza versione si
-è introdotto in SNMP anche il concetto di sicurezza.
-SNMP presenta alcuni problemi: prima di tutto, la perdita/sostituzione di
-un agente provoca la riconfigurazione di tutto il sistema. Inoltre, si tratta sempre di variabili, che sono solo
-rappresentazioni della risorsa: per esempio, con
-SNMP non si può specificare la banda di un router, non la può controllare! Il
-manager poi comunica con gli agent, ma sempre esternamente deve essere specificata come avviene la comunicazione (ogni
-quanto interroga gli agent?). Inne,
-gli agent forniscono informazioni strettamente locali alla risorsa che gestiscono:
-per poter fornire delle informazioni più generali sullo stato della rete è necessario
-aancare a SNMP un sistema di Remote MONitoring, per poter fornire all'utente maggiori possibilità. Si introducono quindi
-dei monitor (probe), in grado
-di lavorare in autonomia e comunicare con il manager, riportando informazioni
-8 Non esistono speciche su come implementarle, quindi le varie realizzazioni sono standard
-de facto
-9 Attenzione, OSI è solo comunicazione!! La banda dovrà poi essere stabilita dal singolo
-router, la tecnologia utilizzata deve essere indipendente da questa comunicazione!
-31
-ltrate. Anche RMON rappresenta una derivazione semplificata da OSI, quindi
-incompatibile.
-OSI permette di definire sistemi molto più complessi, grazie all'uso di un MIB
-più organizzato. Si possono infatti realizzare gerarchie dinamiche fra manger e
-agent, questi si possono quindi creare e distruggere a piacimento (senza dover
-ricongurare l'intero sistema)! Il MIB è totalmente cancellabile, come anche le
-singole operazioni come la GET: si ragiona quindi anche sulla durata dell'operazione, per cui se è oltre il limite
-impostato, è annullata. Gli oggetti gestiti
-possono essere anche molto complessi (non una singola risorsa come con SNMP).
+studiati per un sistema distribuito. Il manager si preoccupa quindi di fare delle richieste sugli agenti, i quali 
+devono rispondere, e possono anche avvisare di eventuali problemi/eventi mediante delle trap. Il protocollo è molto
+sincrono, ovvero si attende sempre una risposta!
+Un agente in realtà gestisce delle variabili standard (non se ne possono introdurre di nuove\footnote{le grandi
+multinazionali si sono fatte assegnare dei sottorami che gestiscono autonomamente}), che sono descritte nel MIB: le
+operazioni sono quindi semplicemente delle GET e SET su queste variabili.
+Una prima reingegnerizzazione di SNMP ha portato alla possibilità di poter definire il manager come una struttura
+gerarchica (sfruttando l'idea di realizzare degli agenti proxy, una via di mezzo fra un agent e un master), in maniera
+da ridurre i rischi di una congestione, suddividendo la responsabilità. Il costo è quindi limitato dal numero di agenti
+presenti. Solo però con la terza versione si è introdotto in SNMP anche il concetto di sicurezza.
+SNMP presenta alcuni problemi: prima di tutto, la perdita/sostituzione di un agente provoca la riconfigurazione di 
+tutto il sistema. Inoltre, si tratta sempre di variabili, che sono solo rappresentazioni della risorsa: per esempio, 
+con SNMP non si può specificare la banda di un router, non la può controllare! Il manager poi comunica con gli agent, 
+ma sempre esternamente deve essere specificata come avviene la comunicazione (ogni quanto interroga gli agent?). 
+Infine, gli agent forniscono informazioni strettamente locali alla risorsa che gestiscono:
+per poter fornire delle informazioni più generali sullo stato della rete è necessario affiancare a SNMP un sistema di
+Remote MONitoring, per poter fornire all'utente maggiori possibilità. Si introducono quindi dei monitor (probe), in
+grado di lavorare in autonomia e comunicare con il manager, riportando informazioni filtrate. Anche RMON rappresenta 
+una derivazione semplificata da OSI, quindi incompatibile.
+OSI permette di definire sistemi molto più complessi, grazie all'uso di un MIB più organizzato. Si possono infatti
+realizzare gerarchie dinamiche fra manager e agent, questi si possono quindi creare e distruggere a piacimento (senza
+dover riconfigurare l'intero sistema)! Il MIB è totalmente cancellabile, come anche le singole operazioni come la GET:
+si ragiona quindi anche sulla durata dell'operazione, per cui se è oltre il limite impostato, è annullata. Gli oggetti
+gestiti possono essere anche molto complessi (non una singola risorsa come con SNMP).
 \subsection{Evoluzione dei router}
-L'idea alla base dell'introduzione di QoS in Internet è che sui nodi intermedi si
-hanno delle informazioni sullo stato del servizio. Un router semplice prende e
-rispedisce i pacchetti, in generale sfruttando la politica FIFO, senza sfruttare
-tutte le possibilità per l'instradamento: garantisce best-effort, ma non QoS,
-poiché i flussi sono limitati da altri flussi!
-Lo sviluppo sarebbe quindi quello di realizzare un router che ragiona in termini differenziati : deve essere in grado
-quindi di marcare i flussi, e deve riuscire
-a trattare la gestione dei flussi in maniera da favorire i flussi più prioritari (magu
-ari scartando/ritardando i pacchetti dei flussi meno prioritari). Si ha che quindi
-lo stato del router dipende dal singolo pacchetto, che a sua volta dipende dal
-traffico. In particolare, è da notare che il costo di una determinata politica
-viene riesso su ogni usso/messaggio: per questo vuole l'intrusione minima,
+L'idea alla base dell'introduzione di QoS in Internet è che sui nodi intermedi si hanno delle informazioni sullo stato
+del servizio. Un router semplice prende e rispedisce i pacchetti, in generale sfruttando la politica FIFO, senza
+sfruttare tutte le possibilità per l'instradamento: garantisce best-effort, ma non QoS, poiché i flussi sono limitati 
+da altri flussi!
+Lo sviluppo sarebbe quindi quello di realizzare un router che \textit{ragiona in termini differenziati}: deve essere 
+in grado quindi di \textit{marcare i flussi}, e deve riuscire a trattarne la gestione in maniera da favorire
+quelli più prioritari (magari scartando/ritardando i pacchetti dei flussi meno prioritari). Si ha che quindi
+lo stato del router dipende dal singolo pacchetto, che a sua volta dipende dal traffico. In particolare, è da notare 
+che il costo di una determinata politica viene riflesso su ogni flusso/messaggio: per questo vuole l'intrusione minima,
 per minimizzare il costo.
-I router per la QoS si possono modellare mediante due modelli non reali, a
-bucket:
-$\bullet$ Leaky bucket: corrisponde a un secchio con perdita. L'idea è quella che
-un router si comporti come un regolatore del usso in uscita. Si stabilisce
-quindi una banda massima, corrispondente alla capacità del bucket: tutto
-ciò che è oltre viene scartato dal router, i pacchetti troppo veloci vengono
-rallentati. Ogni router di questo tipo è quindi pensato per favorire un
-usso alla volta.
-$\bullet$ Token bucket: si prevede la presenza di un token, che garantisce ai pacchetti del usso che lo possiede di
-poter essere smistati dal router. Si associa
-quindi uno stato al usso, e questo stato dipende proprio dal numero di
-token presenti. In questo modello i pacchetti vengono solo ritardati, non
-possono essere persi. A seconda della capacità del bucket, si possono avere
-trasmissioni o rallentamenti. In particolare, un usso potrebbe non aver
-sfruttato i token, e trovandosi quindi ad essere l'unico usso con tutti i
-token può presentare dei burst. Spesso si attende infatti che un determio
-nato usso abbia un numero congruo di token per poter trasmettere tutti
-32
-assieme un insieme di bit; si tratta quindi di un sistema di buerizzazione,
-per cui son necessarie delle apposite risorse. I token vengono generati
-mediante un'apposita legge lineare.
-Spesso si utilizzano i due bucket in serie, per evitare proprio i burst del token
-bucket (quindi prima il token, seguito a cascata dal leaky!).
-Le politiche che un router per la QoS può presentare son diverse, tuttavia
-l'idea è quella di realizzare delle politiche conservative del lavoro: se arriva un
-datagramma e non vi sono condizioni per cui il usso è rallentato e le code son
-libere, il router lavora alla Internet, reinstradando subito il pacchetto. Infatti,
-per la legge di Kleinrock, il router non può essere in una condizione di idle se
-vi sono dei pacchetti da portare in uscita. La legge di kleinrock stabilisce che,
-dati n flussi, con traffico $\lambda$n e tempo medio di servizio $\mu$n :
-$\bullet$ Il prodotto $\rho$n = $\lambda$n · $\mu$n rappresenta l'utilizzo medio del router
-$\bullet$ Denito qn il tempo medio di attesa si ha che
-$\rho$n · qn = K
-(15)
-dove K è una costante
-Questo significa che per favorire un usso (aumento della banda, riduzione del
-ritardo) in realtà se ne deve per forza sfavorire un altro (diminuzione della bana
-da, aumento del ritardo).
-Si è sempre detto che le politiche vengono giudicate dal loro costo, e che
-politiche più semplici sono meno costose. Tuttavia, nel caso di router, si deve
-anche tener conto se la politica è fair o meno (vi sono flussi in condizione di
-starving?10 ).
-Un primo esempio, spesso implementato mediante politiche più semplici
-perché non è realmente implementabile ma solo un modello a tendere, è la
-min-max fairness. Si immagini di avere un numero di richieste superiore alle
-risorse disponibili, e si devono quindi dividere le risorse in maniera fair. L'idea
-è quella di classificare i flussi in base alle loro esigenze, privilegiando i flussi che
-richiedono meno risorse, per poter così lasciare più risorse a chi ne ha maggior\i{}
-mente bisogno; x1 $<$ x2 $<$ . . . $<$ xn indica quindi la priorità con cui servire,
-mentre C indica la capacità massima a disposizione del router. Si possono quina
-di definire mn le risorse effettivamente allocate per il usso n-simo, e Mn le
-risorse attualmente libere. Si ha quindi che:
-mn = min(xn , Mn )
-Mn =
-i=1
-C$-$
-mi
-N $-$n+1
-(16)
-(17)
-10 Osservazione: le politiche dicono come i router possono trattare i flussi, ma tocca poi
-all'utente specificare quali flussi debbano essere trattati in quale modo!
-33
-Un altro modello di scheduling, derivato proprio da come funziona quello del
-singolo processore, è il general scheduling processor : l'idea è che mediante un
-algoritmo di tipo round-robin si faccia passare un bit per ogni usso alla volta:
-tale politica è sicuramente molto fair, ma non applicabile realmente visto che
-si lavora a pacchetti e non a bit. Anche questo modello in realtà serve solo per
-studiare le politiche pensate e confrontarle, per determinarne la fairness.
-In realtà, fra le politiche realmente diuse ed implementate in router con
-QoS vi sono:
-1. Priorità ai flussi : vi sono diversi livelli di priorità con cui poter etichettare
-un usso. Il router quindi si preoccupa di favorire prima i flussi a massima
-priorità. Questo però non è una politica fair ! Se continuano ad arrivare
-pacchetti di questi flussi, quelli meno prioritari non verranno mai serviti
-(non avranno mai banda a sucienza)!
-2. Round robin: è una politica più fair, che garantisce comunque ad ogni
-usso una propria share della banda, ed è una politica molto buona se i
-datagrammi dei vari flussi sono circa delle stesse dimensioni (altrimenti,
-si potrebbe usare un weighted round robin, per poter pesare diversamente
-i datagrammi. Più un datagramma è pesato, maggiori risorse vi sono
-associate. La normalizzazione è difficile da realizzare per flussi troppo
-corti) Il round robin viene spesso implementata in quei router in cui non
-si possono specificare delle priorità speciche, ma in cui comunque i flussi
-devono competere per delle risorse.
-3. Decit round robin: si associa una storia ad ogni usso, perché si impone
-un limite per ciascuno. Se un usso supera la soglia consentita, non viene
-erogato dal router ma si memorizza tale decit. L'erogazione riprenderà
-solo quando gli altri flussi avranno superato tale limite.
-4. Fair queueing: si tratta di round-robin fatto bit a bit. Si fa avanzare
-sempre il usso con il pacchetto più indietro, ovvero quello che se si fosse
-realmente fatta una comunicazione bit a bit, avrebbe terminato la comunicazione per primo! Questa è una delle politiche
-maggiormente usate,
-anche in ambienti Internet, perché si hanno dei calcoli in tempi accettabili.
-Un problema di tutte le politiche è in realtà il fatto di non sapere cosa aspettarsi
-all'arrivo, cioè cosa aspettarsi dai flussi che entrano nel router e che devono come
-petere per le risorse. Una soluzione possibile è quindi quella di inviare insieme
-al usso un'idea dello stato del usso, per vagliare quanto sia pesante o meno!
-Perché un router possa fornire QoS, deve essere dinamicamente ricongurae
-bile (cioè deve poter ammettere/spegnere flussi in maniera dinamica). Questo
-per esempio è un requisito fondamentale per risolvere il problema della cone
-gestione, addirittura in certi casi prevenendolo. Invece che scartare i pacchetti
-34
-ricevuti in maniera silenziosa (alla Internet)11 , si scartano i pacchetti in maniera
-visibile. Questo sistema è contro la trasparenza, ma è un'indicazione chiara per
-le applicazioni e gli utenti che vi sono dei problemi. Si possono quindi mettere
-in piedi delle politiche preventive, tipo la realizzazione di un'apposita nestra di
-trasmissione sul canale.
-Una politica sempre implementata, anche nei router a basso costo, è la Rane
-dom Early Detection. Si tabilisce una coda per ciascuno usso, insieme a due
-soglie:
-$\bullet$ Se il usso fa in modo che la coda sia sempre al di sotto della soglia
-minima, non si scarta nessun pacchetto
-$\bullet$ Se il usso è oltre la soglia massima, tutti i nuovi pacchetti vengono
-scartati.
-$\bullet$ Altrimenti, si decide in maniera random su quale usso scartare i pacchetti, basandosi con una probabilità
-crescente con la lunghezza della
-coda!
+I router per la QoS si possono modellare mediante due modelli non reali, a bucket:
+\begin{itemize}
+ \item \textit{Leaky bucket}: corrisponde a un secchio con perdita. L'idea è quella che un router si comporti come un
+ regolatore del flusso in uscita. Si stabilisce quindi una banda massima, corrispondente alla capacità del bucket: 
+ tutto ciò che è oltre viene scartato dal router, i pacchetti troppo veloci vengono rallentati. Ogni router di questo
+ tipo è quindi pensato per favorire un flusso alla volta.
+ \item \textit{Token bucket}: si prevede la presenza di un token, che garantisce ai pacchetti del flusso che lo
+ possiede di poter essere smistati dal router. Si associa quindi uno stato al flusso, e questo stato dipende proprio 
+ dal numero di token presenti. In questo modello i pacchetti vengono solo ritardati, non possono essere persi. 
+ A seconda della capacità del bucket, si possono avere trasmissioni o rallentamenti. In particolare, un flusso potrebbe
+ non aver sfruttato i token, e trovandosi quindi ad essere l'unico flusso con tutti i token può presentare dei burst.
+ Spesso si attende infatti che un determinato flusso abbia un numero congruo di token per poter trasmettere tutti
+ assieme un insieme di bit; si tratta quindi di un sistema di bufferizzazione, per cui son necessarie delle apposite
+ risorse. I token vengono generati mediante un'apposita legge lineare.
+\end{itemize}
+Spesso si utilizzano i due bucket in serie, per evitare proprio i burst del token bucket (quindi prima il token, 
+seguito a cascata dal leaky!).
+Le politiche che un router per la QoS può presentare son diverse, tuttavia l'idea è quella di realizzare delle 
+politiche conservative del lavoro: se arriva un datagramma e non vi sono condizioni per cui il flusso è rallentato 
+e le code son libere, il router lavora alla Internet, reinstradando subito il pacchetto. Infatti, per la legge di
+Kleinrock, il router non può essere in una condizione di idle se vi sono dei pacchetti da portare in uscita. La legge
+di kleinrock stabilisce che, dati n flussi, con traffico $\lambda n$ e tempo medio di servizio $\mu n$:
+\begin{itemize}
+ \item Il prodotto $\rho_n = \lambda_n \cdot \mu_n$ rappresenta l'utilizzo medio del router
+ \item Definito $q_n$ il tempo medio di attesa si ha che:
+ \begin{equation}
+  \sum \rho_n \cdot q_n = K
+ \end{equation}
+ dove K è una costante
+\end{itemize}
+Questo significa che per favorire un flusso (aumento della banda, riduzione del ritardo) in realtà se ne deve per 
+forza sfavorire un altro (diminuzione della banda, aumento del ritardo).
+Si è sempre detto che le politiche vengono giudicate dal loro costo, e che politiche più semplici sono meno costose.
+Tuttavia, nel caso di router, si deve anche tener conto se la politica è fair o meno (vi sono flussi in condizione di
+starving?\footnote{Osservazione: le politiche dicono come i router possono trattare i flussi, ma tocca poi all’utente
+specificare quali flussi debbano essere trattati in quale modo!}).
+
+Un primo esempio, spesso implementato mediante politiche più semplici perché non è realmente implementabile ma solo un
+modello a tendere, è la min-max fairness. Si immagini di avere un numero di richieste superiore alle risorse
+disponibili, e si devono quindi dividere le risorse in maniera fair. L'idea è quella di classificare i flussi in base
+alle loro esigenze, privilegiando i flussi che richiedono meno risorse, per poter così lasciare più risorse a chi ne ha
+maggiormente bisogno; $x_1 < x_2 < \cdots < x_n$ indica quindi la priorità con cui servire, mentre C indica la capacità
+massima a disposizione del router. Si possono quindi definire $m_n$ le risorse effettivamente allocate per il flusso
+n-simo, e $M_n$ le risorse attualmente libere. Si ha quindi che:
+\begin{equation}
+m_n = min(x_n, M_n)
+\end{equation}
+\begin{equation}
+Mn = \frac{C - \sum_{i = 1}^{n} m_i}{N - n + 1}
+\end{equation}
+Un altro modello di scheduling, derivato proprio da come funziona quello del singolo processore, è il \textit{general 
+scheduling processor}: l'idea è che mediante un algoritmo di tipo round-robin si faccia passare un bit per ogni flusso
+alla volta: tale politica è sicuramente molto fair, ma non applicabile realmente visto che si lavora a pacchetti e non 
+a bit. Anche questo modello in realtà serve solo per studiare le politiche pensate e confrontarle, per determinarne la
+fairness.
+In realtà, fra le politiche realmente diffuse ed implementate in router con QoS vi sono:
+\begin{enumerate}
+ \item \textit{Priorità ai flussi}: vi sono diversi livelli di priorità con cui poter etichettare un flusso. Il router
+ quindi si preoccupa di favorire prima i flussi a massima priorità. Questo però non è una politica fair! Se continuano
+ ad arrivare pacchetti di questi flussi, quelli meno prioritari non verranno mai serviti (non avranno mai banda a
+ sufficienza)!
+ \item \textit{Round robin}: è una politica più fair, che garantisce comunque ad ogni flusso una propria share della
+ banda, ed è una politica molto buona se i datagrammi dei vari flussi sono circa delle stesse dimensioni (altrimenti,
+ si potrebbe usare un weighted round robin, per poter pesare diversamente i datagrammi. Più un datagramma è pesato,
+ maggiori risorse vi sono associate. La normalizzazione è difficile da realizzare per flussi troppo corti) Il round
+ robin viene spesso implementata in quei router in cui non si possono specificare delle priorità specifiche, ma in 
+ cui comunque i flussi devono competere per delle risorse.
+ \item \textit{Deficit round robin}: si associa una storia ad ogni flusso, perché si impone un limite per ciascuno. 
+ Se un flusso supera la soglia consentita, non viene erogato dal router ma si memorizza tale deficit. L'erogazione
+ riprenderà solo quando gli altri flussi avranno superato tale limite.
+ \item \textit{Fair queueing}: si tratta di round-robin fatto bit a bit. Si fa avanzare sempre il flusso con il
+ pacchetto più indietro, ovvero quello che se si fosse realmente fatta una comunicazione bit a bit, avrebbe terminato 
+ la comunicazione per primo! Questa è una delle politiche maggiormente usate, anche in ambienti Internet, perché si
+ hanno dei calcoli in tempi accettabili.
+\end{enumerate}
+Un problema di tutte le politiche è in realtà il fatto di non sapere cosa aspettarsi all'arrivo, cioè cosa aspettarsi
+dai flussi che entrano nel router e che devono competere per le risorse. Una soluzione possibile è quindi quella di
+inviare insieme al flusso un'idea dello stato del flusso, per vagliare quanto sia pesante o meno!
+Perché un router possa fornire QoS, deve essere dinamicamente riconfigurabile (cioè deve poter ammettere/spegnere 
+flussi in maniera dinamica). Questo per esempio è un requisito fondamentale per risolvere il problema della 
+congestione, addirittura in certi casi prevenendolo. Invece che scartare i pacchetti ricevuti in maniera silenziosa
+(alla Internet)\footnote{Vi è ICMP che prova ad avvertire l’utente che i pacchetti non son stati ricevuti, ma lavora
+sempre a livello di IP, quindi rischia di essere coinvolto nella congestione!}, si scartano i pacchetti in maniera
+visibile. Questo sistema è contro la trasparenza, ma è un'indicazione chiara per le applicazioni e gli utenti che vi
+sono dei problemi. Si possono quindi mettere in piedi delle politiche preventive, tipo la realizzazione di un'apposita
+finestra di trasmissione sul canale.
+Una politica sempre implementata, anche nei router a basso costo, è la Random Early Detection. Si tabilisce una coda 
+per ciascun flusso, insieme a due soglie:
+\begin{itemize}
+ \item Se il flusso fa in modo che la coda sia sempre al di sotto della soglia minima, non si scarta nessun pacchetto
+ \item Se il flusso è oltre la soglia massima, tutti i nuovi pacchetti vengono scartati.
+ \item Altrimenti, si decide in maniera random su quale flusso scartare i pacchetti, basandosi con una probabilità
+ crescente con la lunghezza della coda!
+\end{itemize}
 Questa politica preventiva evita la congestione.
 \subsection{Servizi integrati, RFC 2210}
 L'idea alla base dei servizi integrati è quella di essere in grado di riconoscere i
 singoli flussi, grazie al router, in modo da poter dierenziare l'uso delle risorse
-a seconda del usso che si viene a presentare. Il Service Level Agreement è
-quindi fatto a livello di singolo usso, e quindi si può decidere la QoS per ogni
-usso. Si deve quindi stabilire la QoS fra mittente, ricevente e necessaria per
+a seconda del flusso che si viene a presentare. Il Service Level Agreement è
+quindi fatto a livello di singolo flusso, e quindi si può decidere la QoS per ogni
+flusso. Si deve quindi stabilire la QoS fra mittente, ricevente e necessaria per
 ogni nodo intermedio. Questi protocolli descrivono solo la comunicazione che
 le varie parti devono sostenere: la politica locale sarà implementata a livelli
 inferiori localmente dalle singole entità.
@@ -368,7 +325,7 @@ funzionerebbe bene in presenza di nodi congestionati). Per questo, a supporto
 di questo protocollo per la parte statica, sono stati sviluppati altri protocolli
 per il supporto alla QoS a livello applicativo per la parte dinamica. Sono il Real
 Time Protocol e il Real Time Control Protocol. Sono entrambi protocolli basati
-su UDP, per il singolo usso, che si preoccupano di portare materialmente i
+su UDP, per il singolo flusso, che si preoccupano di portare materialmente i
 frame, incapsulandoli in maniera opportuna. Proprio per questo motivo non
 la garantiscono ma sono solo di supporto! RTP per esempio si preoccupa di
 marcare ed ordinare i singoli frame, in maniera di mandarli in ordine13 , mentre
@@ -406,8 +363,8 @@ vedere, ma non modicare.
 Questi protocolli purtroppo non sono molto scalabili, e possono essere usati
 solo in reti molto limitate. Il lettore RealPlayer per esempio sfrutta un altro
 protocollo detto Real Time Streaming Protocol, in cui non si definisce un cammino attivo, ma una volta ottenute le
-speciche dello stream, si utilizza UDP
-o TCP e un sistema di buffering per poter trasferire il usso dalla sorgente al
+specifiche dello stream, si utilizza UDP
+o TCP e un sistema di buffering per poter trasferire il flusso dalla sorgente al
 player. Infatti, inizialmente si parte mediante TCP che riempe il buer, ma se
 un frame non arriva si sfrutta UDP proprio perché non garantisce che i messaggi
 `
