--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -164,7 +164,7 @@ una trasparenza all'allocazione.
 Un altro S.O. che prevede la migrazione dei processi è il V-kernel (sempre
 a scambio di messaggi), che punta all'efficienza e ad essere fault-tolerant, oltre
 alla trasparenza all'allocazione. Questo S.O. lavora in maniera preventiva, per
-cui copia le dierenze fra i processori su cui gira (in tempi diversi) per evitare
+cui copia le differenze fra i processori su cui gira (in tempi diversi) per evitare
 le dipendenze residue dovute al forwarder! Si ha quindi sempre una riqualicazione dei link.
 87
 La migrazione è un modo molto buono per poter separare meccanismi e
@@ -238,7 +238,7 @@ Questi sistemi però non prevedono ancora la possibilità che il codice, mentre 
 muove, esegua! Questo si ha solo con l'introduzione degli agenti mobili. Sono infatti sistemi a multi-hop, in grado di
 cambiare l'allocazione durante l'esecuzione
 e mantenere comunque uno stato coeso. Si può pensare a varie ottimizzazioni,
-magari trasportando solo le dierenze rispetto ad uno stato iniziale o una sintesi
+magari trasportando solo le differenze rispetto ad uno stato iniziale o una sintesi
 dei risultati ottenuti.
 \subsection{Classicazione della mobilità}
 Per gli agenti mobili, si può classificare in diversi gradi la mobilità:
