--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -308,7 +308,7 @@ Si basa comunque sull'idea di realizzare dei proxy per facilitare la comunicazio
 Tuttavia, vi sono due diversi tipi di proxy: quello trasparente (utile per fare
 richieste direttamente al supporto .NET e generato automaticamente) e quello
 reale (realizzato per facilitare la comunicazione C/S, spesso presente). Si ha
-quindi che il secondo proxy è anche modicabile, per poterlo adattare alle proe
+quindi che il secondo proxy è anche modificabile, per poterlo adattare alle proe
 prie esigenze. In particolare, con questo sistema, si riesce a registrare un oggetto remoto all'interno del proprio
 application domain, per poterlo utilizzare in
 maniera trasparente!
