--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -263,7 +263,7 @@ gestione già definite. Un suo glio non eredita direttamente tutte le politiche,
 deve essere specificato quali politiche si vogliono attivate: abbiamo quindi in realtà un gestore per i POA, che
 stabilisce per ogni POA quante e quali politiche
 debba implementare (attiva/disattiva i POA, blocca/scarta le richieste per i
-POA). Si potrebbe permettere all'utente di modicare dinamicamente l'active
+POA). Si potrebbe permettere all'utente di modificare dinamicamente l'active
 object map, ma è fatto di rado.
 Essendo il responsabile dell'oggetto, il POA è responsabile anche del suo
 riferimento. Deve essere in grado quindi di denirlo, identicare gli oggetti in
