--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -151,7 +151,7 @@ Vi sono due possibili modelli per la replicazione, e dipendono dal comportamento
  \item \textit{Copie calde}: in questo caso vi sono diversi oggetti, pronti a sostituire una copia che non funziona:
  l'idea è che in questo caso vi sia invece un protocollo di ruolo, in grado di indicare ad ogni copia che comportamento
  deve assumere (è la principale o meno): infatti, la copia principale è attiva, ovvero in grado di salvare lo stato,
- mentre le altre son passive, che vengono sempre aggiornate ad ogni modica sulla copia attiva. Se fallissero anche 
+ mentre le altre son passive, che vengono sempre aggiornate ad ogni modifica sulla copia attiva. Se fallissero anche 
  tutte le copie calde, si può ripiegare su un sistema a copie fredde, in grado di inizializzare una nuova copia.
 \end{itemize}
 \subsection{Gestione delle risorse}
