--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -74,7 +74,7 @@ derivano da una stessa interfaccia detta IUnknown. In COM ogni oggetto e ogni
 interfaccia possono essere identicati in maniera univoca da dei GUID, che però
 distinguono anche fra componenti ed interfacce.
 35 Sfruttando il GUID, derivato dall'UUID descritto dal DCE. In Microsoft, i diversi GUID
-son classicati in base al tipo di oggetti che riferiscono (interfacce, classi, . . . )
+son classificati in base al tipo di oggetti che riferiscono (interfacce, classi, . . . )
 73
 L'interfaccia funziona semplicemente come un puntatore alle funzioni che descrive, contenute in una virtual method
 table: ogni entry di questa tabella punta
