--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -41,7 +41,7 @@ dell'ORB è in realtà a carico delle singole implementazioni
 27 Questo servizio per esempio è più potente del servizio di nomi dei WS, che è solo locale
 e u
 62
-Altri servizi possono essere specici a determinati domini lavorativi, altri potrebbero invece dipendere dal tipo di
+Altri servizi possono essere specifici a determinati domini lavorativi, altri potrebbero invece dipendere dal tipo di
 applicazione che si sta sviluppando.
 Una caratteristica che è stata sempre trascurata è la sicurezza: questa però è introducibile, visto che CORBA prevede 
 la possibilità di utilizzare degli interceptor!
@@ -75,7 +75,7 @@ verranno descritti in seguito (POA, interface repository, . . . ).
 Il linguaggio per le interfacce è fondamentale per poter definire il contratto che
 si vuole realizzare (quindi la descrizione di tutti i servizi da offrire). Questo
 contratto sarà quindi incorporato nei vari proxy, ovvero sarà poi compilato nei
-linguaggi specici di implementazione!
+linguaggi specifici di implementazione!
 
 È mediante IDL che si stabiliscono tutti i collegamenti necessari, e anche
 l'ORB lo sfrutta per individuare il servizio (si lavora quindi ad un livello più
