--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -337,7 +337,7 @@ Vi sono esempi di implementazioni:
 \begin{itemize}
  \item \textbf{CATOCS}, \textit{Causal Totally Ordered Comunication Operation Support}: è un sistema scalabile,
  mantenedo limitato il numero dei partecipanti. Si mantengono infatti continuamente dei gestori coordinati fra di loro,
- in grado di servire le richieste, si utilizza broadcast in casi specici.
+ in grado di servire le richieste, si utilizza broadcast in casi specifici.
  \item \textbf{ISIS}: è un sistema totalmente basato su gruppi e risorse di gruppo, per cui si necessita di coordinarsi
  fra le varie copie attive dotate di replicazione.
  Prevede l'utilizzo di diverse forme di multicast, distinte a seconda del tipo di ordinamento. Di base si hanno 
