--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -342,7 +342,7 @@ nulla: lavora solo sugli end-point. E sempre possibile comunque tornare a RSVP n
 L'approccio a servizi differenziati consiste nel cercare di fornire QoS non a livello applicativo, ma a livello di 
 rete. Facendo ciò, in realtà, si ha che si sono definiti molti meno protocolli rispetto ai servizi integrati 
 (risultando essere inoltre molto più scalabili). I servizi differenziati sono studiati per supportare le applicazioni
-legacy e per domini specici (comunità di utenti). L'idea è quella che si devono aggreggare i flussi in diverse
+legacy e per domini specifici (comunità di utenti). L'idea è quella che si devono aggreggare i flussi in diverse
 categorie, e a seconda delle categorie si definisce la QoS. Un pacchetto viene quindi classificato dal router in base al
 suo contenuto, e viene associato ad una possibile classe, e quindi ad un possibile trattamento.
 Si ha che quindi l'SLA è stipulato sulla classicazione dei flussi, e le garanzie vengono fornite dalle politiche
