--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -141,7 +141,7 @@ cliente la disponibilità del risultato.
 $\bullet$ Modello ad eventi: il tipico modello consumer/provider, in cui chi è intere
 essato si registra a chi produce gli eventi.
 $\bullet$ Modello a provisioning: oltre agli end-point, vi sono intermediari interessati al risultato.
-Di particolare interesse è la classicazione dei modelli a scambio di messaggi :
+Di particolare interesse è la classificazione dei modelli a scambio di messaggi :
 $\bullet$ In fase di progettazione, si parla di sistemi sincroni se si è interessati al
 risultati, altrimenti asincroni.
 $\bullet$ In fase implementativa, si parla di comunicazione bloccante se il richiedente
