--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -50,7 +50,7 @@ In generale si possono dividere in 4 livelli le tipologie possibili di un serviz
  addirittura guidarne lo sviluppo! Basta pensare che CORBA è uno standard proposto da un consorzio d'aziende, l'OMG.
 \end{itemize}
 
-\subsection{Classicazione dei mw}
+\subsection{Classificazione dei mw}
 I middleware si possono categorizzare in diversi modi, tuttavia la maggior parte
 dell'installato consiste in primis dai DOC, Distributed Object Computing (tipo
 CORBA, orientati all'approccio ad oggetti), e quindi dai MOM, Message Oriented MW. In realtà però, il 'mw' più grande
