--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -240,7 +240,7 @@ cambiare l'allocazione durante l'esecuzione
 e mantenere comunque uno stato coeso. Si può pensare a varie ottimizzazioni,
 magari trasportando solo le differenze rispetto ad uno stato iniziale o una sintesi
 dei risultati ottenuti.
-\subsection{Classicazione della mobilità}
+\subsection{Classificazione della mobilità}
 Per gli agenti mobili, si può classificare in diversi gradi la mobilità:
 $\bullet$ Forte: In ogni punto del codice è possibile specificare la mobilità. Tali
 sistemi sono in realtà dicilmente realizzabili, perché presentano grossi
