--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -345,7 +345,7 @@ rete. Facendo ciò, in realtà, si ha che si sono definiti molti meno protocolli
 legacy e per domini specifici (comunità di utenti). L'idea è quella che si devono aggreggare i flussi in diverse
 categorie, e a seconda delle categorie si definisce la QoS. Un pacchetto viene quindi classificato dal router in base al
 suo contenuto, e viene associato ad una possibile classe, e quindi ad un possibile trattamento.
-Si ha che quindi l'SLA è stipulato sulla classicazione dei flussi, e le garanzie vengono fornite dalle politiche
+Si ha che quindi l'SLA è stipulato sulla classificazione dei flussi, e le garanzie vengono fornite dalle politiche
 implementate dai router (la politica è concordata solo fra l'utente e il server).
 Possibili esempi di servizio sono:
 \begin{itemize}
